--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<script type="text/javascript"> window.convertClicksToTaps = true; </script>
-	<script type="text/javascript" src="../bower_components/mootools/dist/mootools-core.min.js"></script>
+	<script type="text/javascript" src="../bower_components/mootools/dist/mootools-core.js"></script>
 	<script type="text/javascript" src="../src/tap.mootools.js"></script>
 	<script type="text/javascript" src="example.js"></script>
 	<link rel="stylesheet" href="example.css">
